--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   },
   "homepage": "https://github.com/giakhiemdt/Vocafy-Extension#readme",
   "devDependencies": {
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "typescript": "^5.9.3",
     "vite": "^7.3.1"
   },
   "dependencies": {
-    "firebase": "^12.8.0"
+    "firebase": "^12.8.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   }
 }
